--- a/results/views/index.html
+++ b/results/views/index.html
@@ -32,7 +32,7 @@
       </div>
     </div>
     <div id="result" ng-if="total > 100">
-      {{total}} votes
+      {{total}} votes results
     </div>
     <script src="socket.io.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
